--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@types/node": "22.7.4",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
-    "@types/uuid": "^10.0.0"
+    "@types/uuid": "^10.0.0",
+    "ws": "^8.18.3"
   }
 }
